# news-app

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
src/config/: settings.py  urls.py
src/news/: admin.py  models.py  serializers.py  urls.py  views.py
src/news/migrations/: 0001_initial.py  0002_like_dislike.py
src/static/css/: style.css
src/static/js/: script.js
src/templates/: base.html
src/templates/news/: detail.html  detail_stats.html  list.html
